api/assets.css
/* GENERAL */

html,
body {
    height: 100%;
}

body {
    background: #fff;
}

body,
input,
textarea {
    color: #191919;
    font: 14px/140% 'Open Sans', Arial, sans-serif;
}

a {
    color: #119bdf;
    text-decoration: none;
}

a:hover {
    color: #29aeef;
    text-decoration: underline;
}

h1,
h2,
h3,
h4,
p,
ul,
code {
    margin: 0 0 20px;
}

code {
    font-family: 'Monaco', monospace, sans-serif;
}

header {
    z-index: 1;
}

/* LAYOUT */
.main {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    width: 100%;
    max-width: 100%;
}

.content-ui {
    max-width: none;
}

.header__branding {
    margin-left: 62px;
}

#content {
    flex: 1;
}

/* SIDEBAR */
#sidebar {
    background: #222222;
    color: #fff;
    width: 240px;
}

#sidebar img {
    display: block;
    height: 30px;
    margin: 10px auto -10px auto;
}

#sidebar h1 {
    font-size: 14px;
    margin: 0;
    padding: 20px;
    text-align: center;
    text-transform: uppercase;
}

#sidebar h2 {
    color: #888;
    font-size: 14px;
    margin: 0;
}

#sidebar ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

#sidebar ul#links {
    padding: 20px;
}

#sidebar ul ul {
    padding-left: 20px;
}

#sidebar ul li a {
    color: #fff;
    display: block;
    padding: 0 0 15px;
}

#sidebar ul li a:active,
#sidebar ul li a.active {
    text-decoration: underline;
}

#sidebar label {
    display: block;
    margin: 0 0 0 10px;
}

#sidebar input {
    background: #cccccc;
    border: 0;
    width: 200px;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.2);
    -webkit-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.2);
    color: #111;
    margin: 0 0 20px 10px;
    padding: 5px 10px;
}

.sidebar__version-switcher {
    margin: 10px 10px 20px 10px;
}

.sidebar__version-switcher a {
    border: 1px solid  #52ce0e;
    padding: 5px 10px;
    border-radius: 1px;
    display: inline-block;
    box-sizing: border-box;
    width: calc(50% - 2px);
    text-align: center;
}

#sidebar.v1 .sidebar__version-switcher__v1,
#sidebar.v2 .sidebar__version-switcher__v2 {
    background: #52ce0e;
    color: white;
}

-webkit-input-placeholder {
    /* WebKit browsers */
    color: #444;
}

-moz-placeholder {
    /* Mozilla Firefox 4 to 18 */
    color: #444;
}

-moz-placeholder {
    /* Mozilla Firefox 19+ */
    color: #444;
}

-ms-input-placeholder {
    /* Internet Explorer 10+ */
    color: #444;
}

#sidebar input:active,
#sidebar input:focus {
    border-color: #ccc;
    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.1);
    -webkit-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.1);
    outline: none;
}

#sidebar #links input {
    background-color: #555;
    color: bbb;
    margin-left: -10px;
}

/* References */
#content {
    padding: 20px;
}

#content .control {
    cursor: pointer;
    font-size: 12px;
    margin-left: 15px;
}

#content .changes {
    border: 1px solid #f27e61;
    padding: 10px;
    margin-bottom: 20px;
    background: rgba(242, 126, 97, 0.05);
}

#content .changes p {
    margin-bottom: 10px;
}

#content .changes p:last-child {
    margin-bottom: 0px;
}

#content article {
    margin: 15px 0;
}

#content article > a {
    background: #222222;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    cursor: pointer;
    display: block;
    padding: 15px;
}

#content article > a:hover {
    background: #222;
    text-decoration: none;
}

#content a h2 {
    color: #fff;
    font-size: 18px;
    font-weight: normal;
    margin: 0;
}

#content a h2 code {
    float: right;
    font-size: 14px;
}

#content a h2 code b {
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    color: #fff;
    font-weight: normal;
    padding: 3px 6px;
}

/* Default */
#content article {
    border-color: #e2e7ea;
}

#content article a h2 code {
    color: #657e8b;
}

#content article a h2 code b {
    background: #657e8b;
    text-transform: uppercase;
}

/* GET */
#content article.GET a h2 code {
    color: #119bdf;
}

#content article.GET a h2 code b {
    background: #119bdf;
}

/* POST */
#content article.POST a h2 code {
    color: #52ce0e;
}

#content article.POST a h2 code b {
    background: #52ce0e;
}

/* PUT */
#content article.PUT a h2 code {
    color: #e08f10;
}

#content article.PUT a h2 code b {
    background: #e08f10;
}

/* DELETE */
#content article.DELETE a h2 code {
    color: #e02a10;
}

#content article.DELETE a h2 code b {
    background: #e02a10;
}

/* Reference's body */
#content h3 {
    /* like h5 */
    font-size: 20px;
}

#content .body {
    border-top: 1px solid #eef1f2;
    display: block;
    padding: 15px 15px 0;
}

#content .body code, textarea.try {
    border: 1px solid #e2e7ea;
    background: #eef1f2;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    color: #546974;
    padding: 0 1px;
}

#content .body p > code {
    display: block;
    padding: 15px;
    white-space: pre;
    overflow: auto;
}

a.try {
    word-break: break-all;
}

textarea.try {
    box-sizing: border-box;
    width: 100%;
    padding: 15px;
    min-height: 100px;
}

.status-code {
    padding: 5px 10px;
    line-height: 40px;
    border-radius: 10px;
    background-color: #e2e7ea;
    font-weight: bold;
    border: 1px solid #aaa;
}

.status-code.error {
    color: red;
}

.status-code.ok {
    color: green;
}

.status-code:hover {
    background-color: #eee;
    position: relative;
}

.status-code[data-title]:hover:after {
    content: attr(data-title);
    padding: 0 8px;
    color: #333;
    position: absolute;
    left: 0;
    top: 110%;
    white-space: nowrap;
    z-index: 20;
    border-radius: 5px;
    box-shadow: 0px 0px 4px #222;
    background-color: #F8EF1E;
}

